[CHORE] v2.3 - Limpieza de archivos obsoletos ARCHIVOS ELIMINADOS: - VisualObserver*.html (versiones antiguas) - docs/ACTUALIZACIONES_PENDIENTES.md (obsoleto) - docs/ANALISIS_RENDIMIENTO_DESPACHADOR.md (obsoleto) - docs/DEPENDENCY_MAP.md (obsoleto) - docs/DOCUMENTACION_PENDIENTE.md (obsoleto) - docs/GIT_PRIMER_COMMIT.md (obsoleto) - docs/JARVIS_USER_GUIDE.md (obsoleto) - docs/PRIMER_COMMIT.txt (obsoleto) - docs/PROBLEM_SOLVER.md (obsoleto) - docs/README_PROFILE.md (obsoleto) - docs/SIGNAL_DISPATCHER_GUIDE.md (obsoleto) - docs/manuals/ACCELERATOR_THEORY.md (obsoleto) - src/sv/volcan/net/VolcanNetworkRelay.java (obsoleto) - src/sv/volcan/net/VolcanRemoteProbe.java (obsoleto) - src/sv/volcan/tools/NetworkProbe.java (obsoleto)