@@ -1,443 +1,126 @@
-# Protocolo de Certificación AAA+ - Volcan Engine
+# CERTIFICATION_PROTOCOL
 
-## Autoridad
-
-**Documento**: Protocolo de Certificación AAA+  
-**Nivel**: Kernel Security & Performance Engineering  
-**Versión**: 1.0  
-**Fecha**: 2026-01-05  
-**Propósito**: Establecer criterios formales de certificación AAA+ para componentes críticos del motor
+**Subsistema**: Quality Assurance / Certification
+**Nivel**: Kernel Security & Performance Engineering
+**Versión**: 1.0
+**Estado**: Mandatory
+**Autoridad**: System Architect
 
 ---
 
-## Definición de Certificación AAA+
+## 1. Definición de Certificación AAA+
 
-Un componente del Volcan Engine es considerado **AAA+ Certified** cuando cumple con los siguientes criterios de forma determinista y sostenida:
+Un componente del Runtime es considerado **AAA+ Certified** si cumple determinísticamente con los siguientes criterios de hardware:
 
-| Categoría | Estándar AAA+ | Resultado Obtenido | Estado | Documento de Referencia |
-|-----------|---------------|--------------------|---------|--------------------------|
-| **Latencia Atómica** | <150ns por operación | **1.52ns** | ✅ **98.9x mejor** | [AAA_CODING_STANDARDS.md](file:///c:/Users/theca/Documents/GitHub/VolcanEngine/src/sv/volcan/test/documentacion/AAA_CODING_STANDARDS.md) |
-| **Throughput** | >10M eventos/s (Batch) | **659.63M ops/s** | ✅ **65.9x mejor** | [Test_BusBenchmark.java](file:///c:/Users/theca/Documents/GitHub/VolcanEngine/src/sv/volcan/test/Test_BusBenchmark.java) |
-| **Alineación L1** | 64 bytes (Padding verificado) | **64 bytes** | ✅ Verificado | [DOCUMENTACION_BUS.md](file:///c:/Users/theca/Documents/GitHub/VolcanEngine/src/sv/volcan/test/documentacion/DOCUMENTACION_BUS.md) |
-| **Alineación de Página** | 4KB (TLB Miss Reduction) | **4KB** | ✅ Verificado | [TECHNICAL_GLOSSARY.md](file:///c:/Users/theca/Documents/GitHub/VolcanEngine/src/sv/volcan/test/documentacion/TECHNICAL_GLOSSARY.md) |
-| **Resiliencia de Arranque** | 100% (Fail-Fast Strategy) | **100%** | ✅ **Certificado** | [UltraFastBootSequence.java](file:///c:/Users/theca/Documents/GitHub/VolcanEngine/src/sv/volcan/kernel/UltraFastBootSequence.java) |
-| **Lock-Free** | VarHandles (Sin locks) | **VarHandles** | ✅ Verificado | [VolcanAtomicBus.java](file:///c:/Users/theca/Documents/GitHub/VolcanEngine/src/sv/volcan/bus/VolcanAtomicBus.java) |
+| Categoría | Estándar AAA+ | Resultado (Ref) | Verificación |
+| :--- | :--- | :--- | :--- |
+| **Latencia Atómica** | <150ns por operación | **1.52ns** | `AAA_CODING_STANDARDS.md` |
+| **Throughput** | >10M eventos/s (Batch) | **659.63M ops/s** | `Test_BusBenchmark.java` |
+| **Alineación L1** | 64 bytes (Padding verificado) | **64 bytes** | `DOCUMENTACION_BUS.md` |
+| **Alineación de Página** | 4KB (TLB Optimization) | **4KB** | `TECHNICAL_GLOSSARY.md` |
+| **Resiliencia de Arranque** | 100% (Fail-Fast) | **100%** | `UltraFastBootSequence.java` |
+| **Concurrencia (Lock-Free)** | VarHandles (Memory Barriers) | **Verificado** | `VolcanAtomicBus.java` |
 
-**Estado de Certificación**: ✅ **100% COMPLETADO** (6/6 métricas certificadas)
-
-**Fecha de Benchmark**: 2026-01-08T21:58:00-06:00  
-**Herramienta**: Test_BusBenchmark.java  
-**Iteraciones**: 10,000,000 por test
+**Estado de Certificación**: **COMPLETADO** (6/6 métricas validadas).
 
 ---
 
-## Análisis de Resiliencia de Arranque (Gatekeeper 360°)
+## 2. Protocolo de Verificación de Arranque (Boot Integrity)
 
-### Filosofía
+### Principio de Diseño
+El sistema debe garantizar la integridad estructural de la memoria y el hardware antes de iniciar operaciones críticas.
 
-> "Un sistema de misión crítica no solo debe ser rápido; debe ser resiliente y determinista ante el colapso."
+### 2.1. Nivel 1: Validación de Integridad L1 (Cache Line)
+**Propósito**: Detección de corrupción de memoria o alineación incorrecta que cause False Sharing.
 
-Para que el Volcan Engine sea considerado 100% AAA+, el protocolo de arranque debe incluir tres capas de defensa antes de otorgar el certificado:
-
-### Capa 1: Validación de Firma Térmica (L1 Cache)
-
-**Propósito**: Detectar ruido térmico en el hardware que causaría False Sharing
-
-**Mecánica**:
 ```java
 if (getPaddingChecksum() != 0) {
-    throw new Error("Padding corruption detected - Hardware has thermal noise");
+    throw new SystemIntegrityError("Memory Padding Corruption Detected");
 }
 ```
+**Criterio de Éxito**: `checksum == 0`.
 
-**Impacto de fallo**:
-- Sin validación: Latencia degrada de 150ns a 1000ns aleatoriamente
-- Con validación: Colapso preventivo antes de iniciar el motor
+### 2.2. Nivel 2: Verificación de Estrés de Latencia
+**Propósito**: Confirmación de estabilidad del SO bajo carga sintética.
 
-**Criterio AAA+**: `checksum == 0`
-
----
-
-### Capa 2: Prueba de Carga de Seguridad (Stress-Short)
-
-**Propósito**: Validar que el sistema operativo no está bajo carga externa
-
-**Mecánica**:
 ```java
-// Ráfaga de 10,000 eventos
-for (int i = 0; i < 10_000; i++) {
-    long start = System.nanoTime();
-    bus.offer(testEvent);
-    long latency = System.nanoTime() - start;
-    // Registrar latencia
-}
-
-// Calcular percentil 99
+// Burst Benchmark
 if (p99Latency > 200) {
-    activateSafeMode(); // Modo de Aislamiento
+    activateSafeMode(); // Degradación controlada
 }
 ```
+**Criterio de Éxito**: `p99 latency < 200ns`.
 
-**Impacto de fallo**:
-- Sin validación: Motor arranca pero con latencias impredecibles
-- Con validación: Activación automática de Modo Seguro
+### 2.3. Nivel 3: Validación de Paginación (TLB)
+**Propósito**: Asegurar alineación de 4KB para evitar fallos de traducción de direcciones (TLB Misses).
 
-**Criterio AAA+**: `p99 latency < 200ns`
-
----
-
-### Capa 3: Verificación de Página Crítica (TLB)
-
-**Propósito**: Validar alineación de 4KB en memoria off-heap
-
-**Mecánica**:
 ```java
-long address = memorySegment.address();
 if (address % 4096 != 0) {
-    // Re-alineación dinámica
-    address = VolcanSignalPacker.alignToPage4KB(address);
+    address = alignToPage4KB(address);
 }
 ```
-
-**Impacto de fallo**:
-- Sin validación: Segmentation Fault al procesar telemetría masiva
-- Con validación: Re-alineación dinámica o colapso preventivo
-
-**Criterio AAA+**: `offset % 4096 == 0`
+**Criterio de Éxito**: `address % 4096 == 0`.
 
 ---
 
-## Arranque de Doble Vía (Dual-Boot Strategy)
+## 3. Estrategia de Arranque Dual (Dual-Boot)
 
-### Arquitectura de Arranque
+El sistema implementa selectores de modo basados en la integridad del entorno:
 
-```
-┌─────────────────────────────────────────────────────────────┐
-│                  BOOT SELECTOR AAA+                         │
-├─────────────────────────────────────────────────────────────┤
-│                                                             │
-│  [1] Arranque Soberano (AAA+ <150ns - Full Performance)    │
-│      ├─ Validación de Firma Térmica                        │
-│      ├─ Prueba de Carga de Seguridad                       │
-│      ├─ Verificación de Página Crítica                     │
-│      └─ Benchmark AAA+ Completo                            │
-│                                                             │
-│  [2] Arranque de Emergencia (Stable Mode - Safe Latency)   │
-│      ├─ Desactivar optimizaciones de riesgo                │
-│      ├─ Buffer de emergencia activado                      │
-│      ├─ Latencia objetivo: <500ns (degradado)              │
-│      └─ Throughput objetivo: >1M eventos/s (reducido)      │
-│                                                             │
-│  [3] Diagnóstico de Colapso                                │
-│      ├─ Análisis de JIT Deoptimization                     │
-│      ├─ Detección de malware en hot-path                   │
-│      ├─ Reporte de estado de hardware                      │
-│      └─ Generación de log forense                          │
-│                                                             │
-│  [4] Arranque Escalado (Media Capacidad)                   │
-│      ├─ 50% de capacidad de bus                            │
-│      ├─ Latencia objetivo: <250ns                          │
-│      ├─ Ideal para desarrollo/testing                      │
-│      └─ Protección contra sobrecarga                       │
-│                                                             │
-└─────────────────────────────────────────────────────────────┘
-```
+1.  **Modo Soberano (High Performance)**:
+    *   Habilitado si todas las comprobaciones de integridad pasan.
+    *   Latencia < 150ns.
+    *   Throughput completo.
+
+2.  **Modo Seguro (Safe Mode)**:
+    *   Activado ante fallos de integridad no críticos.
+    *   Buffers de emergencia habilitados.
+    *   Optimización JIT agresiva deshabilitada.
 
 ---
 
-## Tabla de Verificación AAA+
+## 4. Matriz de Fallos y Recuperación
 
-### Criterios de Certificación
-
-| Verificación | Criterio AAA+ | Si falla... | Acción del Sistema |
-|--------------|---------------|-------------|-------------------|
-| **Integridad Física** | `checksum == 0` | Colapso Preventivo | Motor se detiene para evitar corrupción de datos |
-| **Latencia Determinista** | `<150ns sostenidos` | Degradación Controlada | Se activa buffer de emergencia (Modo Seguro) |
-| **Alineación de Memoria** | `offset % 4096 == 0` | Re-alineación Dinámica | Kernel intenta mover puntero off-heap |
-| **Throughput Masivo** | `>10M eventos/s` | Reducción de Capacidad | Limita a 50% de slots disponibles |
-| **Resiliencia de Arranque** | `100% éxito` | Arranque de Emergencia | Activa Modo Seguro automáticamente |
-| **Protección Malware** | `Firma válida` | Bloqueo de Arranque | Requiere diagnóstico manual |
+| Condición de Fallo | Detección | Acción del Sistema |
+| :--- | :--- | :--- |
+| **Corrupción de Integridad Física** | `checksum != 0` | Parada Preventiva (System Halt) |
+| **Jitter Térmico / Latencia Alta** | `p99 > 200ns` | Activación Módo Seguro |
+| **Desalineación de Memoria** | `offset % 4096 != 0` | Re-alineación Dinámica |
+| **Saturación de Throughput** | `Queue Full` | Backpressure (Drop/Block) |
 
 ---
 
-## Análisis de Colapso: Causas Raíz
+## 5. Análisis de Causas Raíz (RCA)
 
-### Causa Raíz #1: JIT Deoptimization
+### Causa 1: Desoptimización JIT (Deoptimization)
+*   **Síntoma**: Degradación de rendimiento en caliente.
+*   **Solución**: Uso estricto de tipos primitivos (`SignalProcessor`) para evitar Type-Checks ambigüos.
 
-**Síntoma**: Código optimizado para 150ns vuelve a modo interpretado
+### Causa 2: False Sharing
+*   **Síntoma**: Latencia errática (>150ns).
+*   **Solución**: Padding explícito de 64 bytes (`headShield`, `tailShield`).
 
-**Causa**: Cambio en el flujo de datos que invalida optimizaciones del JIT
-
-**Solución AAA+**:
-```java
-// Usar SignalProcessor (interfaz sin boxing)
-// El JIT nunca duda del tipo de dato
-dispatcher.processAllEvents(signal -> {
-    // Procesamiento directo de primitivos
-    int cmd = VolcanSignalPacker.unpackCommandId(signal);
-    int value = VolcanSignalPacker.unpackValue(signal);
-});
-```
-
-**Prevención**:
-- Usar `SignalProcessor` en lugar de `LongConsumer`
-- Evitar boxing/unboxing en hot-path
-- Mantener tipos primitivos (long) en todo el pipeline
+### Causa 3: Inyección de Código / Corrupción
+*   **Síntoma**: Comportamiento anómalo en Hot-Path.
+*   **Solución**: Validación de integridad en tiempo de ejecución.
 
 ---
 
-### Causa Raíz #2: False Sharing (Ruido Térmico)
+## 6. Procedimiento de Certificación
 
-**Síntoma**: Latencia errática (150ns → 1000ns aleatoriamente)
+### Pre-Requisitos
+*   [ ] JDK 25 Instalado.
+*   [ ] Flags JVM: `AlwaysPreTouch`, `UseZGC`.
 
-**Causa**: Variables críticas en la misma cache line
+### Ejecución
+*   [ ] Ejecutar `Test_BusHardware`.
+*   [ ] Ejecutar `Test_BusBenchmark`.
 
-**Solución AAA+**:
-```java
-// Padding de 64 bytes (7 slots × 8 bytes)
-long headShield_L1_slot1, headShield_L1_slot2, headShield_L1_slot3,
-     headShield_L1_slot4, headShield_L1_slot5, headShield_L1_slot6,
-     headShield_L1_slot7;
-
-volatile long head = 0; // Aislado en su propia cache line
-```
-
-**Prevención**:
-- Validar `getPaddingChecksum() == 0` en arranque
-- Usar nomenclatura de hardware (headShield, isolationBridge, tailShield)
-- Ejecutar `Test_BusHardware` antes de certificar
+### Validación
+*   [ ] Confirmar alineaciones (64B / 4KB).
+*   [ ] Confirmar Latencia/Throughput.
 
 ---
 
-### Causa Raíz #3: TLB Miss (Alineación de Página)
-
-**Síntoma**: Segmentation Fault al procesar telemetría masiva
-
-**Causa**: Memoria off-heap no alineada a 4KB
-
-**Solución AAA+**:
-```java
-// Alineación automática en arranque
-long address = memorySegment.address();
-if (address % 4096 != 0) {
-    address = VolcanSignalPacker.alignToPage4KB(address);
-    memorySegment = MemorySegment.ofAddress(address);
-}
-```
-
-**Prevención**:
-- Usar `Arena.ofConfined()` con alineación explícita
-- Validar alineación en `Test_BusBenchmark`
-- Activar flags de JVM: `--enable-native-access=ALL-UNNAMED`
-
----
-
-### Causa Raíz #4: Malware en Hot-Path
-
-**Síntoma**: Latencia súbitamente degradada sin causa aparente
-
-**Causa**: Código malicioso inyectado en el pipeline de eventos
-
-**Solución AAA+**:
-```java
-// Validación de firma en cada evento crítico
-if (!validateEventSignature(event)) {
-    logSecurityBreach(event);
-    activateEmergencyShutdown();
-}
-```
-
-**Prevención**:
-- Validar firma térmica en arranque
-- Ejecutar diagnóstico de colapso periódicamente
-- Monitorear latencias en tiempo real (p99, p999)
-
----
-
-## Protección contra Malware
-
-### Estrategia de Defensa en Profundidad
-
-#### Nivel 1: Validación de Firma Térmica
-
-**Propósito**: Detectar modificaciones no autorizadas en el layout de memoria
-
-**Mecánica**:
-```java
-// Checksum criptográfico de padding
-long signature = getPaddingChecksum();
-if (signature != EXPECTED_SIGNATURE) {
-    throw new SecurityException("Thermal signature mismatch - Possible malware");
-}
-```
-
-#### Nivel 2: Aislamiento de Hot-Path
-
-**Propósito**: Prevenir inyección de código en el pipeline crítico
-
-**Mecánica**:
-```java
-// Solo permitir SignalProcessor conocidos
-private static final Set<Class<?>> TRUSTED_PROCESSORS = Set.of(
-    MovementSystem.class,
-    PhysicsSystem.class,
-    NetworkSystem.class
-);
-
-if (!TRUSTED_PROCESSORS.contains(processor.getClass())) {
-    throw new SecurityException("Untrusted processor detected");
-}
-```
-
-#### Nivel 3: Monitoreo de Latencias Anómalas
-
-**Propósito**: Detectar degradación súbita causada por malware
-
-**Mecánica**:
-```java
-// Baseline de latencia establecido en arranque
-private static final long BASELINE_LATENCY_NS = 150;
-private static final long ANOMALY_THRESHOLD_NS = 300;
-
-if (currentLatency > ANOMALY_THRESHOLD_NS) {
-    logAnomalyDetected(currentLatency);
-    if (consecutiveAnomalies > 10) {
-        activateSafeMode();
-    }
-}
-```
-
----
-
-## Sistema de Escalado de Arranque
-
-### Modos de Operación
-
-#### Modo 1: Full Performance (100% Capacidad)
-
-**Características**:
-- Latencia: <150ns
-- Throughput: >10M eventos/s
-- Capacidad de bus: 16384 slots (2^14)
-- Riesgo: Alto (requiere hardware óptimo)
-
-**Cuándo usar**: Producción con hardware certificado
-
----
-
-#### Modo 2: Balanced (75% Capacidad)
-
-**Características**:
-- Latencia: <200ns
-- Throughput: >7.5M eventos/s
-- Capacidad de bus: 12288 slots
-- Riesgo: Medio
-
-**Cuándo usar**: Producción con hardware estándar
-
----
-
-#### Modo 3: Safe (50% Capacidad)
-
-**Características**:
-- Latencia: <250ns
-- Throughput: >5M eventos/s
-- Capacidad de bus: 8192 slots
-- Riesgo: Bajo
-
-**Cuándo usar**: Desarrollo, testing, hardware limitado
-
----
-
-#### Modo 4: Emergency (25% Capacidad)
-
-**Características**:
-- Latencia: <500ns
-- Throughput: >1M eventos/s
-- Capacidad de bus: 4096 slots
-- Riesgo: Mínimo
-
-**Cuándo usar**: Recuperación de colapso, diagnóstico
-
----
-
-## Checklist de Certificación AAA+
-
-### Pre-Arranque
-
-- [ ] Validar que `SovereignProtocol.bat` existe y es ejecutable
-- [ ] Verificar que JDK 25 está instalado
-- [ ] Confirmar que flags de JVM están configurados correctamente
-- [ ] Crear backup de archivos críticos
-
-### Arranque
-
-- [ ] Ejecutar Boot Selector AAA+
-- [ ] Seleccionar modo de arranque apropiado
-- [ ] Validar firma térmica (Capa 1)
-- [ ] Ejecutar prueba de carga de seguridad (Capa 2)
-- [ ] Verificar alineación de página (Capa 3)
-
-### Post-Arranque
-
-- [ ] Ejecutar `Test_BusHardware` (validación de padding)
-- [ ] Ejecutar `Test_BusBenchmark` (métricas de rendimiento)
-- [ ] Validar latencia <150ns (p50, p95, p99)
-- [ ] Validar throughput >10M eventos/s
-- [ ] Confirmar alineación L1 (64 bytes)
-- [ ] Confirmar alineación de página (4KB)
-
-### Certificación
-
-- [ ] Todas las métricas AAA+ cumplidas
-- [ ] Sin anomalías de seguridad detectadas
-- [ ] Resiliencia de arranque 100%
-- [ ] Generar certificado de conformidad
-
----
-
-## Certificado de Conformidad AAA+
-
-```
-═══════════════════════════════════════════════════════════════
-              VOLCAN ENGINE - AAA+ CERTIFICATION
-═══════════════════════════════════════════════════════════════
-
-Component: [Nombre del componente]
-Version: [Versión]
-Date: [Fecha de certificación]
-
-PERFORMANCE METRICS:
-├─ Latency (offer):     [XX]ns  <150ns
-├─ Latency (poll):      [XX]ns  <150ns
-├─ Throughput (batch):  [XX]M/s >10M/s
-├─ L1 Alignment:        64 bytes
-└─ Page Alignment:      4KB
-
-RESILIENCE METRICS:
-├─ Thermal Signature:   Valid
-├─ Boot Success Rate:   100%
-├─ Safe Mode Available: Yes
-└─ Malware Protection:  Active
-
-CERTIFICATION STATUS: AAA+ CERTIFIED
-
-Certified by: Marvin-Dev
-Signature: [Hash criptográfico]
-═══════════════════════════════════════════════════════════════
-```
-
----
-
-## Referencias
-
-- [AAA_CODING_STANDARDS.md](file:///c:/Users/theca/Documents/GitHub/VolcanEngine/src/sv/volcan/test/documentacion/AAA_CODING_STANDARDS.md) - Estándares de codificación
-- [DOCUMENTACION_BUS.md](file:///c:/Users/theca/Documents/GitHub/VolcanEngine/src/sv/volcan/test/documentacion/DOCUMENTACION_BUS.md) - Arquitectura del bus
-- [TECHNICAL_GLOSSARY.md](file:///c:/Users/theca/Documents/GitHub/VolcanEngine/src/sv/volcan/test/documentacion/TECHNICAL_GLOSSARY.md) - Glosario técnico
-
----
-
-**Versión**: 1.0  
-**Fecha**: 2026-01-05  
-**Autor**: Marvin-Dev  
-**Estado**: Activo
+**Estado**: VIGENTE
+**Autoridad**: System Architect
